--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,61 @@
-/**/
+#enfe{
+  height:2em;
+transition: width 2s; 
+transition:height 2s ;
+}
+#enfe:hover{
+width:100%;
+height:20em; 
+
+}
+
+#anal{
+  height:2em;
+transition: width 2s; 
+transition:height 2s ;
+}
+#anal:hover{
+width:100%;
+height:20em; 
+
+}
+
+#turis{
+  height:2em;
+transition: width 2s; 
+transition:height 2s ;
+}
+#turis:hover{
+width:100%;
+height:20em; 
+
+}
+
+#edif{
+  height:2em;
+transition: width 2s; 
+transition:height 2s ;
+}
+#edif:hover{
+width:100%;
+height:20em; 
+
+}
+h2{
+  -webkit-animation-name:example;
+  animation-duration: 10s; 
+	animation-iteration-count: infinite;
+
+	color: white;
+	 font-family: Arial, Helvetica, sans-serif;
+}
+@-webkit-keyframes example{
+	0%{color: red;}
+  50%{color:skyblue;}
+	100%{color: blue;}
+}
+@keyframes example{
+	0%{color: red;}
+	100%{color: blue;}
+}
 
